# CYXRAG

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STRUCTURE_REVIEW.md  algorithm.md  dataset.md  done1.md  init_call_plan.md  milestones.md  model.md  open_rag_benchmark.py  open_rag_cli.py  open_rag_config.example.json  open_rag_plan.md  overview.md  phase1a_config.json  phase1a_retrieval.md  phase1a_retrieval.py  phase1b_answer.md  phase1b_answer.py  phase1b_handoff.md  phase1b_test_packet.json  phase2_endpoint_doctor.py  phase2_handoff.md  phase2_local_endpoint_scan.md  phase2_local_endpoint_scan.py  phase2_model_validation.md  phase2_openai_compat_proxy.py  phase2_probe_report_check.py  phase2_probe_suite.py  phase2_real_model_check.py  phase2_real_model_runbook.md  phase2_runtime.md  phase2_stub_runtime.py  phase3_debug_context.md  phase3_debug_context.py  phase4_training_context.py  phase5_graph_context.py  (+16 more)
docs/: BENCHMARKS.md  agent_handoff.md  architecture.md  deployment_model.md  open_rag_skill_contract.md  phase1a_handoff.md  phase2_endpoint_doctor.md  phase2_openai_compat_proxy.md  phase2_probe_report_check.md  phase2_real_model_check.md  phase4_training_context.md  phase5_graph_context.md  phase7_finetune_decision.md  phase7_prepare_finetune_dataset.md  phase8_knowledge_pack.md  tofix42.md  tofix42_current_handoff.md  tofix42_status.md
examples/: README.md
implementation/: README.md  assistant_panel.md  backend_runtime_contract.md  command_window_integration.md  deployment_model.md  fine_tuning_position.md  init_call_plan.md  knowledge_pack.md  plugin_boundary.md  plugin_command_window_integration.md  roadmap.md
knowledge_pack/: diagnostics.json  lexicon.json  (+2 more)
(+37 files in other folders)
